# kdb

./: .gitignore  CHANGELOG.md  CODEMAP.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  install.sh
.github/workflows/: release.yml
.issues/: index.md  iss-0001-kdb-workspaces.md  iss-0002-templates.md  iss-0003-databases-bases.md  iss-0004-canvas-support.md  iss-0005-code-comment-links.md  iss-0006-realtime-workspace.md  iss-0007-production-readiness.md  iss-0008-installable-packages.md  iss-0009-kdb-init.md  iss-0010-completion-header-titles.md  iss-0011-install-script.md  iss-0012-cli-commands.md  iss-0013-code-file-links.md  iss-0014-code-file-indexes.md  iss-0015-check-orphans-flag.md  iss-0016-codemap.md  iss-0017-index-syntax-highlighting.md  iss-0018-symbols-command.md  iss-0019-refs-command.md  iss-0020-deps-command.md  iss-0021-graph-command.md  iss-0022-tree-command.md  iss-0023-index-header-filepath.md  iss-0024-native-symbol-display.md  iss-0025-symbol-body-and-code-refs.md  iss-0026-workspace-module-resolution.md  iss-0028-code-symbol-refs.md  iss-0029-persistent-index.md  iss-0029.1-performance-profiling.md  iss-0030-ignore-crate-file-walking.md  iss-0031-parallel-file-parsing.md  iss-0032-consolidate-check-flags.md  iss-0033-remove-outline-command.md  iss-0034-performance-profiling.md  iss-0035-root-relative-paths.md  iss-0036-language-plugin-interface.md  iss-0036-rust-workspace-module-resolution.md  iss-0037-go-workspace-module-resolution.md  iss-0038-python-package-discovery-resolution.md  (+48 more)
.issues/archive/: iss-0015-check-orphans-flag.md  iss-0020-deps-command.md  iss-0023-index-header-filepath.md  iss-0025-symbol-body-and-code-refs.md  iss-0030-ignore-crate-file-walking.md  iss-0036-rust-workspace-module-resolution.md  iss-0041-rust-custom-lib-path.md  (+4 more)
.kdb/: config.toml
.plan/: KDB-0004-tasks-move.md  KDB-0005-codemap-index.md  KDB-0009-prosaic-compile-check.md  cleanup-and-delete-semantics.md
docs/: vault-root.md
playground/: a.md  b.md  broken.md  c.md  index.md  orphan.md
src/: CODEMAP.md  cmd.rs  color.rs  config.rs  cycles.rs  discovery.rs  labels.rs  lang.rs  lib.rs  main.rs  materialize.rs  projects.rs  root.rs  search.rs  spaces.rs  statuses.rs  tasks.rs  tasks_import.rs  tree.rs  update.rs
tests/: cli.rs  codemap.rs  config.rs  fmt.rs  index.rs  lsp.rs  refs_eval.rs  render.rs  root.rs  symbols.rs
(+226 files in other folders)
