[package]
name = "kdb"
version = "0.27.0"
edition = "2024"
description = "Code intelligence CLI and LSP for knowledge bases"
license = "MIT"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
globset = "0.4.15"
ignore = "0.4.24"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
toml = "0.8.23"
tower-lsp = "0.20.0"
tree-sitter = "0.26.5"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-md = { version = "0.5.2", features = ["parser"] }
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
rayon = "1.10"
walkdir = "2.5.0"
unrs_resolver = "1.11.1"
tempfile = "3.25.0"
ureq = "3"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
